# SearchVacancy_database

./: .gitignore  README.md  main.py  pyproject.toml
config/: config.py  database.ini.example
src/: DBManager.py  api.py  db.py  employers.py  hh_api.py  utils.py  vacancies.py
tests/: conftest.py  test_DBManager.py  test_api.py  test_db.py  test_employers.py  test_vacancies.py
